--- a/README
+++ b/README
@@ -5,14 +5,11 @@
 
 Contact: K. Alexandria Bond (ORCID: 0000-0003-1492-6798; kbond@andrew.cmu.edu) and Timothy Verstynen (ORCID: 0000-0003-4720-0336; timothyv@andrew.cmu.edu).
 
+## Neuroloki overview
 
-## Overview
+Data were acquired from 8/5/19 to 11/24/20, with a break due to the COVID-19 pandemic beginning 03/10/20. Data collection resumed on 10/20/20. Time stamps and the computer state (last reboot, internet access, window refresh time) for the experimental computer were recorded for each session and run (see *_runInfo.csv for details).
 
-- Project name: Neuroloki
-
-- Data were acquired from 8/5/19 to 11/24/20, with a break due to the COVID-19 pandemic beginning 03/10/20. Data collection resumed on 10/20/20. Time stamps and the computer state (last reboot, internet access, window refresh time) for the experimental computer were recorded for each session and run (see *_runInfo.csv for details).
-
-- Brief overview of the tasks in the experiment
+### Tasks
 
 Perceptual discrimination criterion task
 The experiment used male and female Greebles as selection targets. Participants were first trained to discriminate between male and female Greebles to prevent errors in perceptual discrimination from interfering with selection on the basis of value. Using a two-alternative forced choice task, participants were presented with a male and female Greeble and asked to select the female, with the male and female Greeble identities resampled on each trial. Participants received binary feedback regarding their selection (correct or incorrect). This criterion task ended after participants reached 95% accuracy.  
@@ -22,9 +19,9 @@ After reaching perceptual discrimination criterion for each session, each partic
 
 Three levels of the probability of reward for the optimal and suboptimal choices (conflict) and how often the optimal choice shifted (volatility) were independently manipulated for a total of nine conditions.  
 
-- Dependent variables: Reaction time and binary accuracy data, trial-by-trial BOLD signal.
+### Dependent variables: Reaction time, binary accuracy data, and trial-by-trial BOLD signal.
 
-- Quality assessment of the data: Imaging quality was assessed using MRIQC. See /derivatives/neuroloki_RL_task_QC.csv for QC logs by session and subject. 
+### Quality assessment of the data: Imaging quality was assessed using MRIQC. See /derivatives/neuroloki_RL_task_QC.csv for QC logs by session and subject. 
 
 ## Methods
 
