--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 
 Contact: K. Alexandria Bond (ORCID: 0000-0003-1492-6798; kbond@andrew.cmu.edu) and Timothy Verstynen (ORCID: 0000-0003-4720-0336; timothyv@andrew.cmu.edu).
 
-## Neuroloki overview
+## Overview
 
 Data were acquired from 8/5/19 to 11/24/20, with a break due to the COVID-19 pandemic beginning 03/10/20. Data collection resumed on 10/20/20. Time stamps and the computer state (last reboot, internet access, window refresh time) for the experimental computer were recorded for each session and run (see *_runInfo.csv for details).
 
