--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Contact: K. Alexandria Bond (ORCID: 0000-0003-1492-6798; kbond@andrew.cmu.edu) a
 
 ## Overview
 
-Data were acquired from 8/5/19 to 11/24/20, with a break due to the COVID-19 pandemic beginning 03/10/20. Data collection resumed on 10/20/20. Time stamps and the computer state (last reboot, internet access, window refresh time) for the experimental computer were recorded for each session and run (see *_runInfo.csv for details).
+Data were acquired from 8/5/19 to 11/24/20, with a break due to the COVID-19 pandemic beginning 03/10/20. Data collection resumed on 10/20/20. Time stamps and the computer state (last reboot, internet access, window refresh time) for the experimental computer were recorded for each session and run.
 
 ### Tasks
 
@@ -72,4 +72,4 @@ Eyetracking data and behavioral data for run 1 of Session 4 for Subject 1 are mi
 
 ### Notes
 
-See session_notes.csv for session-by-session notes on data collection, including estimates of eye-tracking quality and other notable events. Note that Sessions 3-9 for Sub-01 contain legacy-formatted ECG, respiration, and pulse oximetry data.
+Note that Sessions 3-9 for Sub-01 contain legacy-formatted ECG, respiration, and pulse oximetry data.
